--- a/package.json
+++ b/package.json
@@ -5,6 +5,21 @@
   "description": "Helps you with tasks running JSFL scripts.",
   "preferGlobal": "true",
   "author": "Raphael Luchini",
-  "engines": { "node": "*" }
+  "engines": { "node": "*" },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/raphaelluchini/node-jsfl.git"
+  },
+  "bugs": {
+    "url": "https://github.com/raphaelluchini/node-jsfl/issues"
+  },
+  "tags": [
+    "jsfl",
+    "node",
+    "flash",
+    "adobe",
+    "as3",
+    "actionscript"
+  ]
 }
 
